Fix gap

--- a/FamilyBoard/wwwroot/css/site.css
+++ b/FamilyBoard/wwwroot/css/site.css
@@ -11,7 +11,6 @@ html, body {
     height: 100%;
     width: 100%;
     display: grid;
-    grid-gap: 5px;
     grid-template-rows: 60px auto;
 }
 
